@@ -1,6 +1,6 @@
 man_MANS = chilli.8 
 man_aux = $(man_MANS:.1=.x)
-EXTRA_DIST = $(man_MANS) dictionary.chillispot hotspotlogin.cgi 
+EXTRA_DIST = $(man_MANS) dictionary.chillispot hotspotlogin.cgi chilli.init
 
 
 
