@@ -111,6 +111,8 @@ option "cmdsocket"   - "path to the command unix socket" string no
 option "swapoctets"    - "Swap the meaning of input/output octets/packets" flag   off
 option "usestatusfile" - "Use the status file to keep track of sessions" flag   off
 option "localusers"    - "File keep 'Local' usernames and passwords" string no
+option "postauthproxy" - "IP of an upstream transparent proxy" string no
+option "postauthproxyport" - "Port of an upstream transparent proxy" int default="0" no
 option "wpaguests"     - "Allow WPA 'Guest' access" flag off
 option "chillixml"     - "Use ChilliSpot XML in WISPr blocks" flag   off
 
